# pc-agnet

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROJECT_REPORT.md  README.md  compose.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/data/: knowledge_documents.json  knowledge_vector_index.json
backend/evals/: catalog_llm_eval_cases.json
backend/scripts/: audit_catalog_spec_values.py  build_knowledge_vector_index.py  eval_answer_synthesizer.py  eval_catalog_llm_tools.py  import_compact_catalog.py  import_pc_part_dataset.py  seed_demo.py  seed_user_isolation.py  sync_knowledge.py
backend/tests/: conftest.py  test_agent_tool_wiring.py  test_answer_context.py  test_api_integration.py  test_audit_catalog_spec_values.py  test_auth_isolation.py  test_auth_service.py  test_boundary_classification.py  test_catalog_eval.py  test_catalog_repository.py  test_config.py  test_conversation_context.py  test_dataset_mapper.py  test_import_compact_catalog.py  test_import_pc_part_dataset.py  test_knowledge_rag.py  test_llm.py  test_long_term_memory.py  test_memory_api.py  test_memory_response.py  test_orchestrator.py  test_orchestrator_outcomes.py  test_orchestrator_plan_execute_e2e.py  test_orchestrator_task_dag.py  test_orchestrator_tool_observation_eval.py  test_orchestrator_wave_loop_cases.py  test_request_router.py  test_router_capabilities.py  test_seed_user_isolation.py  test_session_memory.py  test_stateless_routing.py  test_tool_eval.py  test_tools.py  (+1 more)
(+220 files in other folders)
